tests/gold/errors/conversion.comp
[[1;33mWARN[0m]: src/errors/conversion.3(9:0): implicit convertion from '[1;34mchr[0m' to '[1;34mint[0m'.
[[1;33mWARN[0m]: src/errors/conversion.3(10:0): implicit convertion from '[1;34mint[0m' to '[1;34mchr[0m'.
[[1;33mWARN[0m]: src/errors/conversion.3(11:0): implicit convertion from '[1;34mflt[0m' to '[1;34mint[0m'.
[[1;33mWARN[0m]: src/errors/conversion.3(12:0): implicit convertion from '[1;34mflt[0m' to '[1;34mchr[0m'.
[[1;33mWARN[0m]: src/errors/conversion.3(13:0): implicit convertion from '[1;34mchr[0m' to '[1;34mflt[0m'.
running: as -g -msyntax=intel build/conversion.asm -o build/conversion.o
build/conversion.asm: Assembler messages:
build/conversion.asm:32: Error: ambiguous operand size for `cvtsi2sd'
